--- a/app/src/main/res/layout/activity_play_later.xml
+++ b/app/src/main/res/layout/activity_play_later.xml
@@ -6,14 +6,16 @@
     android:layout_height="match_parent"
     tools:context=".presentation.feature.play_later.PlayLaterActivity">
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:layout_width="wrap_content"
+    <androidx.appcompat.widget.SearchView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Play later"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginHorizontal="12dp"
+        android:layout_marginTop="6dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
