--- a/app/src/main/res/layout/item_game_thumbnail.xml
+++ b/app/src/main/res/layout/item_game_thumbnail.xml
@@ -2,6 +2,7 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:foreground="?android:attr/selectableItemBackground"
     android:layout_marginHorizontal="4dp"
     android:layout_marginVertical="10dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
