--- a/app/src/main/res/layout/item_game_thumbnail.xml
+++ b/app/src/main/res/layout/item_game_thumbnail.xml
@@ -43,7 +43,7 @@
             android:textColor="@color/black"
             android:textSize="12sp"
             android:paddingHorizontal="5dp"
-            android:background="#D0D0D0"
+            android:background="@color/grey"
             android:layout_marginEnd="8dp"
             tools:text="MMOARPG"
             android:textStyle="bold"
