--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -13,7 +13,7 @@
         android:id="@+id/iv_photo"
         android:layout_width="130dp"
         android:layout_height="130dp"
-        tools:src="@drawable/ic_person"
+        android:src="@drawable/ic_person"
         android:scaleType="fitXY"
         android:background="@color/grey"
         android:layout_marginBottom="10dp"
