--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -12,7 +12,7 @@
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:scaleType="fitXY"
-        tools:src="@drawable/ic_person"
+        android:src="@drawable/ic_person"
         android:background="@color/grey"
         android:layout_marginBottom="10dp"
         app:layout_constraintVertical_chainStyle="packed"
