--- a/app/src/main/res/layout/view_game_details_min_sys_req.xml
+++ b/app/src/main/res/layout/view_game_details_min_sys_req.xml
@@ -2,132 +2,91 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <androidx.appcompat.widget.LinearLayoutCompat
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:padding="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/additional_information"
+            android:id="@+id/tv_additional_information"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/minimum_system_requirements"
             android:textStyle="bold"
             android:textSize="20sp"
+            android:paddingVertical="10dp"
             android:textColor="@color/black"
             android:layout_marginBottom="8dp"
-            android:gravity="center" />
+            android:gravity="center"
+            app:layout_constraintBottom_toTopOf="@id/component_os"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
-        <androidx.appcompat.widget.AppCompatTextView
+        <br.com.cwi.freegames.presentation.component.GameInformationComponent
+            android:id="@+id/component_os"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/os"
-            android:textColor="@color/grey_light"
-            android:textSize="18sp"
-            android:gravity="center" />
+            android:paddingVertical="5dp"
+            android:paddingHorizontal="5dp"
+            app:component_title_information="@string/os"
+            app:layout_constraintBottom_toTopOf="@id/component_processor"
+            app:layout_constraintTop_toBottomOf="@id/tv_additional_information"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/tv_game_os"
+        <br.com.cwi.freegames.presentation.component.GameInformationComponent
+            android:id="@+id/component_processor"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:text="teste"
-            android:textColor="@color/black"
-            android:textSize="18sp"
-            android:gravity="center" />
+            android:paddingVertical="5dp"
+            android:paddingHorizontal="5dp"
+            app:component_title_information="@string/processor"
+            app:layout_constraintTop_toBottomOf="@id/component_os"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/component_storage"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
-        <androidx.appcompat.widget.AppCompatTextView
+        <br.com.cwi.freegames.presentation.component.GameInformationComponent
+            android:id="@+id/component_storage"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:paddingVertical="5dp"
+            android:paddingHorizontal="5dp"
+            app:component_title_information="@string/storage"
+            app:layout_constraintTop_toBottomOf="@id/component_processor"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/component_graphics"
+            app:layout_constraintEnd_toStartOf="@id/component_memory"/>
+
+        <br.com.cwi.freegames.presentation.component.GameInformationComponent
+            android:id="@+id/component_memory"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:paddingVertical="5dp"
+            android:paddingHorizontal="5dp"
+            app:component_title_information="@string/memory"
+            app:layout_constraintBottom_toTopOf="@id/component_graphics"
+            app:layout_constraintTop_toBottomOf="@id/component_processor"
+            app:layout_constraintStart_toEndOf="@id/component_storage"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+        <br.com.cwi.freegames.presentation.component.GameInformationComponent
+            android:id="@+id/component_graphics"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/processor"
-            android:textColor="@color/grey_light"
-            android:textSize="18sp"
-            android:gravity="center" />
+            android:paddingVertical="5dp"
+            android:paddingHorizontal="5dp"
+            app:component_title_information="@string/graphics"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/component_memory"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/tv_game_processor"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:text="teste"
-            android:textColor="@color/black"
-            android:textSize="18sp"
-            android:gravity="center" />
-
-        <androidx.appcompat.widget.LinearLayoutCompat
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <androidx.appcompat.widget.LinearLayoutCompat
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="vertical">
-
-                <androidx.appcompat.widget.AppCompatTextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/storage"
-                    android:textColor="@color/grey_light"
-                    android:textSize="18sp"
-                    android:gravity="center" />
-
-                <androidx.appcompat.widget.AppCompatTextView
-                    android:id="@+id/tv_game_storage"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    tools:text="teste"
-                    android:textColor="@color/black"
-                    android:textSize="18sp"
-                    android:gravity="center" />
-
-            </androidx.appcompat.widget.LinearLayoutCompat>
-
-            <androidx.appcompat.widget.LinearLayoutCompat
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="vertical">
-
-                <androidx.appcompat.widget.AppCompatTextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/memory"
-                    android:textColor="@color/grey_light"
-                    android:textSize="18sp"
-                    android:gravity="center" />
-
-                <androidx.appcompat.widget.AppCompatTextView
-                    android:id="@+id/tv_game_memory"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    tools:text="teste"
-                    android:textColor="@color/black"
-                    android:textSize="18sp"
-                    android:gravity="center" />
-
-            </androidx.appcompat.widget.LinearLayoutCompat>
-
-        </androidx.appcompat.widget.LinearLayoutCompat>
-
-        <androidx.appcompat.widget.AppCompatTextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/graphics"
-            android:textColor="@color/grey_light"
-            android:textSize="18sp"
-            android:gravity="center" />
-
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/tv_game_graphics"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:text="teste"
-            android:textColor="@color/black"
-            android:textSize="18sp"
-            android:gravity="center" />
-    </androidx.appcompat.widget.LinearLayoutCompat>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
