refatoração e correção de bugs + testes

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,6 @@
     <color name="grey">#D0D0D0</color>
     <color name="grey_super_light">#f3f3f3</color>
     <color name="base_color">#f1f1f1</color>
+    <color name="take_photo_disabled">#F20645AD</color>
+    <color name="take_photo_focused">#F22967CD</color>
 </resources>
