--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -15,6 +15,7 @@
         android:layout_height="130dp"
         android:src="@drawable/ic_person"
         android:scaleType="fitXY"
+        android:layout_centerInParent="true"
         android:background="@color/grey"
         android:layout_marginBottom="10dp"
         app:layout_constraintVertical_chainStyle="packed"
@@ -28,7 +29,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/edit_photo_button"
-        android:textColor="#F20645AD"
+        android:textColor="@color/selector_take_photo"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@id/tv_name"
         app:layout_constraintTop_toBottomOf="@id/iv_photo"
@@ -87,6 +88,7 @@
         android:layout_height="wrap_content"
         android:text="@string/save_profile"
         android:textSize="18sp"
+        android:foreground="?android:attr/selectableItemBackground"
         android:layout_marginTop="40dp"
         android:textColor="@color/black"
         android:paddingHorizontal="40dp"
