--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -54,6 +54,7 @@
         android:textColor="@color/black"
         android:paddingHorizontal="20dp"
         android:paddingVertical="4dp"
+        android:foreground="?android:attr/selectableItemBackground"
         android:background="@color/grey"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_email"
